tests/fixtures/positive/modifiers/StaticVariablesMustBeFinalAndScreamingSnakeCase.cls
public class Example {
    // Valid: Static final with SCREAMING_SNAKE_CASE
    private static final String CONSTANT_VALUE = 'value';

    // Valid: Static final with numbers
    private static final Integer MAX_RETRY_COUNT = 3;

    // Valid: Static final with underscores
    private static final String API_KEY_NAME = 'key';

    // Valid: Static final with all caps
    private static final Boolean IS_ENABLED = true;
}

